# todo-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
docs/: help.md
src/todo_cli/: __init__.py  main.py
src/todo_cli/css/: todo.tcss
src/todo_tui/: __init__.py  main.py
src/todo_tui/css/: todo.tcss
src/todo_tui/docs/: help.md
tests/: test_benchmark.py
